Make partners open in a separate tab

--- a/app/views/frontend/partners/_partners_each.haml
+++ b/app/views/frontend/partners/_partners_each.haml
@@ -8,4 +8,4 @@
           =image_tag partner.logo
           .partner-image-overlay-content
             %h2=partner.name
-            =link_to '', partner.link, :class=>'image-wrapper-link'
+            =link_to '', partner.link, :class=>'image-wrapper-link', :target => "_blank"
